<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Pocket Watch</string>
    <string name="menu_item_settings_title">Settings</string>
    <string name="menu_item_about_title">About</string>
    <string name="pref_location_default">true</string>
    <string name="pref_location_key">LOCATION</string>
    <string name="pref_location_summary">Append location info to message</string>
    <string name="pref_location_title">Location</string>
    <string name="pref_message_default">Help, I am in need of emergency assistance!</string>
    <string name="pref_message_key">MESSAGE</string>
    <string name="pref_message_summary">Text to send</string>
    <string name="pref_message_title">Message</string>
    <string name="pref_recipients_key">RECIPIENTS</string>
    <string name="pref_recipients_summary">Recipients of the emergency message</string>
    <string name="pref_recipients_title">Recipients</string>
    <string name="pref_transmission_interval_default">600000</string>
    <string-array name="pref_transmission_interval_entries">
        <item>1 minute</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>30 minutes</item>
        <item>60 minutes</item>
    </string-array>
    <string name="pref_transmission_interval_key">TRANSMISSION_INTERVAL</string>
    <string name="pref_transmission_interval_summary">Time between message transmissions</string>
    <string name="pref_transmission_interval_title">Transmission Interval</string>
    <string-array name="pref_transmission_interval_values">
        <item >60000</item>
        <item >300000</item>
        <item >600000</item>
        <item >1800000</item>
        <item >3600000</item>
    </string-array>
    <string name="control_panel_info_text">Tap the panic button to begin sending your emergency message.</string>
</resources>